# GKlib

./: .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  GKlib.h  GKlibSystem.cmake  LICENSE  Makefile  README.md  fs.c  gk_arch.h  gk_defs.h  gk_proto.h  gk_struct.h  graph.c  io.c  string.c
.github/workflows/: ci.yaml  ci.yml  step_test.yaml
apps/: cmpnbrs.c  csrcnv.c  gkgraph.c  gkrw.c  gkuniq.c  grKx.c  m2mnbrs.c  splatt2svd.c
cmake/: CMakePresets-CI.json  GKlibConfig.cmake.in  GKlibSystem.cmake  GKlib_PackagesInfo.cmake  config.cmake.in  gklib.pc.in  install.cmake
include/: CMakeLists.txt  GKlib.h  gk_arch.h  gk_externs.h  gk_mkrandom.h  gk_proto.h
include/GKlib/: GKlib.h  gk_arch.h  gk_getopt.h  gk_mkpqueue.h  gk_proto.h
src/: CMakeLists.txt  blas.c  cache.c  csr.c  error.c  fs.c  getopt.c  gk_util.c  gkregex.c  graph.c  io.c  itemsets.c  mcore.c  memory.c  random.c  sort.c  string.c  timers.c
src/win32/: CMakeLists.txt  adapt.c
test/: CMakeLists.txt  csrcnv.c  gkgraph.c  gkuniq.c
test/cmpnbrs/: CMakeLists.txt
test/csrcnv/: CMakeLists.txt
test/fis/: CMakeLists.txt
test/gkgraph/: CMakeLists.txt
test/gksort/: CMakeLists.txt
test/gkuniq/: CMakeLists.txt
test/grKx/: CMakeLists.txt
test/m2mnbrs/: CMakeLists.txt
test/rw/: CMakeLists.txt
test/splatt2svd/: CMakeLists.txt
test/strings/: CMakeLists.txt
